--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -1,24 +1,61 @@
 @font-face {
-  font-family: 'iconfont-tree';  /* project id 3354902 */
-  src: url('//at.alicdn.com/t/font_3354902_sou7nsstvob.woff2?t=1650789909819') format('woff2'),
-  url('//at.alicdn.com/t/font_3354902_sou7nsstvob.woff?t=1650789909819') format('woff'),
-  url('//at.alicdn.com/t/font_3354902_sou7nsstvob.ttf?t=1650789909819') format('truetype');
+  font-family: 'iconfont-tree';
+  /* project id 3354902 */
+  src: url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff2?t=1650857568480') format('woff2'),
+       url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff?t=1650857568480') format('woff'),
+       url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.ttf?t=1650857568480') format('truetype');
 }
 
-// 公司icon
-.cv-ztree li span.button.company_ico_open:before,
-.cv-ztree li span.button.company_ico_close:before,
-.cv-ztree li span.button.company_ico_docu:before {
-  content: "\e61a";
-  font-family: 'iconfont-tree'; 
-}
-//close右箭头
-.cv-ztree li span.button.noline_close:before {
-  content: '\e62d';
-  font-family: 'iconfont-tree'; 
-}
-//open下三角
-.cv-ztree li span.button.noline_open:before {
-  content: '\e62e';
-  font-family: 'iconfont-tree'; 
+.cv-ztree {
+  width: 100%;
+  height: 95%;
+  overflow-y: scroll;
+  line-height: 25px;
+  min-height: 36px;
+  font-family: 'iconfont-tree';
+
+  li {
+    span.button {
+      display: inline-block;
+    }
+
+
+    // 公司icon
+    .company_ico_open:before,
+    .company_ico_close:before,
+    .company_ico_docu:before {
+      content: "\e61a";
+    }
+
+    //close右箭头
+    .noline_close:before {
+      content: '\e62d';
+    }
+
+    //open下三角
+    .noline_open:before {
+      content: '\e62e';
+    }
+    // 复选框未勾选
+    .checkbox_false_full:before,.checkbox_false_full_focus:before {
+      content: "\e67b";
+    }
+     // 复选框勾选上
+    .checkbox_true_full:before,.checkbox_true_full_focus:before {
+      content: '\e686';
+      color: #409eff;
+    }
+    //机构icon
+    .organize_ico_open:before,
+    .organize_ico_close:before,
+    .organize_ico_docu:before {
+      content: "\e666";
+    }
+
+    .fleed_ico_open:before,
+    .fleed_ico_close:before,
+    .fleed_ico_docu:before {
+      content: "\e77a";
+    }
+  }
 }
