--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -2,60 +2,88 @@
   font-family: 'iconfont-tree';
   /* project id 3354902 */
   src: url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff2?t=1650857568480') format('woff2'),
-       url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff?t=1650857568480') format('woff'),
-       url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.ttf?t=1650857568480') format('truetype');
+    url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff?t=1650857568480') format('woff'),
+    url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.ttf?t=1650857568480') format('truetype');
 }
 
 .cv-ztree {
   width: 100%;
   height: 95%;
   overflow-y: scroll;
-  line-height: 25px;
+  
   min-height: 36px;
-  font-family: 'iconfont-tree';
-
+  font-family: 'Microsoft YaHei';
   li {
-    span.button {
-      display: inline-block;
+    font-family: 'iconfont-tree';
+      line-height: 25px;
+      a{
+        
+       
+      }
+      .node_name{
+        display: inline-block;
+        width: 60%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 12px;
+      }
+      .curSelectedNode{
+        background: #e4e7ed;
+        // display: inline-block;
+        // width: 80%;
+        padding: 5px 0;
+      opacity: .8;
+      }
+    .button{
+      margin-right: 3px;
     }
+  
+      // 公司icon
+      .company_ico_open:before,
+      .company_ico_close:before,
+      .company_ico_docu:before {
+        content: "\e61a";
+      }
 
+      //close右箭头
+      .noline_close:before {
+        content: '\e62d';
+      }
 
-    // 公司icon
-    .company_ico_open:before,
-    .company_ico_close:before,
-    .company_ico_docu:before {
-      content: "\e61a";
-    }
+      //open下三角
+      .noline_open:before {
+        content: '\e62e';
+      }
 
-    //close右箭头
-    .noline_close:before {
-      content: '\e62d';
-    }
+      // 复选框未勾选
+      .checkbox_false_full:before,
+      .checkbox_false_full_focus:before,
+      .checkbox_false_part:before,
+      .checkbox_false_part_focus:before {
+        content: "\e67b";
+      }
 
-    //open下三角
-    .noline_open:before {
-      content: '\e62e';
-    }
-    // 复选框未勾选
-    .checkbox_false_full:before,.checkbox_false_full_focus:before {
-      content: "\e67b";
-    }
-     // 复选框勾选上
-    .checkbox_true_full:before,.checkbox_true_full_focus:before {
-      content: '\e686';
-      color: #409eff;
-    }
-    //机构icon
-    .organize_ico_open:before,
-    .organize_ico_close:before,
-    .organize_ico_docu:before {
-      content: "\e666";
-    }
+      // 复选框勾选上
+      .checkbox_true_full:before,
+      .checkbox_true_full_focus:before,
+      .checkbox_true_part:before,
+      .checkbox_true_part_focus:before {
+        content: '\e686';
+        color: #409eff;
+      }
 
-    .fleed_ico_open:before,
-    .fleed_ico_close:before,
-    .fleed_ico_docu:before {
-      content: "\e77a";
-    }
+      //机构icon
+      .organize_ico_open:before,
+      .organize_ico_close:before,
+      .organize_ico_docu:before {
+        content: "\e666";
+      }
+
+      .fleed_ico_open:before,
+      .fleed_ico_close:before,
+      .fleed_ico_docu:before {
+        content: "\e77a";
+      }
   }
 }
