--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -8,17 +8,30 @@
 
 .cv-ztree {
   width: 100%;
+   max-width: 320px;
   height: 95%;
   overflow-y: scroll;
   
-  min-height: 36px;
+  min-height: 320px;
   font-family: 'Microsoft YaHei';
+  ul,li{
+    padding: 0px;
+    margin: 0;
+  }
   li {
     font-family: 'iconfont-tree';
-      line-height: 25px;
+      line-height: 26px;
+      text-align: left;
+      padding-left: 5px;
       a{
-        
-       
+        text-align: left;
+      &:hover{
+        text-indent: 3px;
+        // padding: 5px 0;
+        // opacity: .8;
+        // background: #e4e7ed;
+        // border-radius: 6px;
+      }
       }
       .node_name{
         display: inline-block;
@@ -32,13 +45,15 @@
         background: #e4e7ed;
         // display: inline-block;
         // width: 80%;
+        text-indent: 3px;
         padding: 5px 0;
       opacity: .8;
+      border-radius: 6px;
       }
-    .button{
-      margin-right: 3px;
-    }
-  
+   
+      .button{
+        padding-right: 3px;
+      }
       // 公司icon
       .company_ico_open:before,
       .company_ico_close:before,
