--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -11,7 +11,7 @@
   max-width: 320px;
   height: 95%;
   overflow-y: scroll;
-  
+  background-color: #fff;
   min-height: 320px;
   font-family: 'Microsoft YaHei';
   ul,li{
