--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -5,7 +5,7 @@
     url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff?t=1650857568480') format('woff'),
     url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.ttf?t=1650857568480') format('truetype');
 }
-
+//阿里图标账号 15386671927@163.com
 .cv-ztree {
   width: 100%;
   min-width: 200px;
