--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -24,10 +24,11 @@
       line-height: 26px;
       text-align: left;
       padding-left: 5px;
+      position: relative;
       a{
         text-align: left;
       &:hover{
-        text-indent: 3px;
+        // text-indent: 3px;
         // padding: 5px 0;
         // opacity: .8;
         // background: #e4e7ed;
@@ -46,7 +47,7 @@
         background: #e4e7ed;
         // display: inline-block;
         // width: 80%;
-        text-indent: 3px;
+        // text-indent: 3px;
         padding: 5px 0;
       opacity: .8;
       border-radius: 6px;
