--- a/package/asset/index.scss
+++ b/package/asset/index.scss
@@ -18,6 +18,11 @@
     //   font-size: 16px;
     // }
   }
+
+
+  .overTool{
+   
+  }
 // treeList
 .cvIcon_collection::before{
   font-family: 'iconfont-cv_components_v3';
