--- a/package/components_Tree/tree/src/assets/css/awesome.scss
+++ b/package/components_Tree/tree/src/assets/css/awesome.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'iconfont-tree';
-  /* project id 3354902 */
-  src: url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff2?t=1650857568480') format('woff2'),
-    url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.woff?t=1650857568480') format('woff'),
-    url('//at.alicdn.com/t/font_3354902_ay4w47j4gq.ttf?t=1650857568480') format('truetype');
+/* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
+  src: url('//at.alicdn.com/t/c/font_3354902_e1jqaw0b31p.woff2?t=1669600219554') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3354902_e1jqaw0b31p.woff?t=1669600219554') format('woff'),
+       url('//at.alicdn.com/t/c/font_3354902_e1jqaw0b31p.ttf?t=1669600219554') format('truetype');
 }
 
 //阿里图标账号 15386671927@163.com
@@ -121,6 +121,10 @@
     .fleed_ico_close:before,
     .fleed_ico_docu:before {
       content: "\e77a";
+    }
+// 摄像头icon
+    .camera_ico_docu:before{
+      content: "\e965";
     }
   }
 }
